--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<li><h4>Harshit Tripathi</h4></li>
 					<li><h4>Ravinder Singh</h4></li>
 				</ul>
-				<h4><strong>Here Technologies used are-</strong></h4>
+				<h4><strong>The Technologies that used are-</strong></h4>
                 <ul>
                     <li><h4>HTML</h4></li>
                     <li><h4>CSS</h4></li>
@@ -537,10 +537,10 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<h4><strong>Creator:</strong></h4><h5>This Resume Builder is created by</h5>
 				<ul>
-					<li><h5><strong>Harshit TRipathi</strong></h5></li>
+					<li><h5><strong>Harshit Tripathi</strong></h5></li>
 					<li><h5><strong>Ravinder Singh</strong></h5></li>
 				</ul>
-				<h5><strong>Here Technologies used are-</strong></h5>
+				<h5><strong>The Technologies that used are-</strong></h5>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
